--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=SpringDemo
+server.port=8080
+
+## DB Settings
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://localhost:3306/MOVIESYSTEM?createDatabaseIfNotExist=true
+spring.datasource.hikari.maximum-pool-size=10
