--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.url=jdbc:mysql://localhost:3306/MOVIESYSTEM?createDatabaseIfNotExist=true
 spring.datasource.hikari.maximum-pool-size=10
+
+##JPA settings
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
